--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "title": "html2canvas",
-  "name": "html2canvas",
+  "name": "@bonio-tw/html2canvas",
   "description": "Screenshots with JavaScript",
   "main": "dist/html2canvas.js",
   "module": "dist/html2canvas.esm.js",
   "typings": "dist/types/index.d.ts",
   "browser": "dist/html2canvas.js",
-  "version": "1.3.3",
+  "version": "0.0.3",
   "author": {
-    "name": "Niklas von Hertzen",
-    "email": "niklasvh@gmail.com",
-    "url": "https://hertzen.com"
+    "name": "Casey change & Bonio TW",
+    "email": "rd@bonio.com.tw",
+    "url": "https://github.com/BoniO-Taiwan/html2canvas"
   },
   "engines": {
     "node": ">=8.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:niklasvh/html2canvas.git"
+    "url": "git+ssh://git@github.com/BoniO-Taiwan/html2canvas.git"
   },
   "bugs": {
-    "url": "https://github.com/niklasvh/html2canvas/issues"
+    "url": "https://github.com/BoniO-Taiwan/html2canvas/issues"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
